overflow error that should be fixed now!!!

--- a/src/components/ContactBlock.scss
+++ b/src/components/ContactBlock.scss
@@ -48,7 +48,6 @@
     font-family: "Archivo Narrow", sans-serif;
     text-align: center;
     text-transform: uppercase;
-    padding: 0 75px;
     position: absolute;
 }
 
@@ -183,5 +182,9 @@
 
     .social-block {
         justify-content: center;
+    }
+
+    .contact-title {
+        font-size: 40px;
     }
 }
